right fixed sidebar, scrollbar

--- a/style/style.css
+++ b/style/style.css
@@ -10,14 +10,30 @@
     font-family: chalkboard;
     src: url(font/chalkboard.ttf);
 }
+html{
+    overflow: scroll;
+    overflow-x: hidden;
+}
 html,body{
     height:100%;
-    background-color: #424242;
+    background-color: #212121;
+}
+::-webkit-scrollbar {
+    width: 0.2vw;
+    background: #212121;
+}
+::-webkit-scrollbar-thumb{
+    background: #bdbdbd;
+    border-radius: 5px;
+}
+.container {
+    float: left;
+    height: 100%;
+    width: calc(100% - 4vw)
 }
 
 .intro-outer-div{
     position: relative;
-    z-index: 1;
     width: 100%;
     height: 100%; 
     display: flex;
@@ -74,12 +90,12 @@ html,body{
     transform: scale(1.2) rotate(180deg);
 }
 .main-nav{
-    position: absolute;
+    position: fixed;
+    float: right;
     right: 0;
     top: 0;
     height: 100%;
     width: 4vw;
-    background-color: rgb(0, 0, 0, 0.5);
     display: grid;
     grid-template-columns: [start] 100% [end];
     grid-template-rows: [work] 30% [about] 30% [contact] 30% [links] auto [end];
@@ -124,6 +140,23 @@ html,body{
     justify-content: center;
     align-items: center;
 }
+#nav-links {
+    grid-row-start: links;
+    grid-row-end: end;
+    grid-column-start: start;
+    grid-column-end: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#nav-links img {
+    width: 1.7vw;
+}
+#nav-links a:hover{
+    transform: scale(1.1);
+}
+
 .work {
     position: relative;
     height: 100%;
@@ -141,21 +174,4 @@ html,body{
     height: 100%;
     width: 100%;
     background-color: red;
-}
-#nav-links {
-    grid-row-start: links;
-    grid-row-end: end;
-    grid-column-start: start;
-    grid-column-end: end;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#nav-links img {
-    width: 1.7vw;
-}
-#nav-links a:hover{
-    transform: scale(1.1);
-
 }
